# mine-mail

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  design-qa-tooltip.md  design-qa.md
.github/workflows/: ci.yml  release.yml
src/: backend.rs  config.rs  database.rs  error.rs  imap_client.rs  lib.rs  main.rs  mime.rs  models.rs  smtp_client.rs
web/: .npmrc  AGENTS.md  index.html  package-lock.json  package.json  vite.config.mjs
web/design/qa/: design-qa.md
web/src/: App.desktop.test.jsx  App.jsx  App.test.jsx  main.jsx  styles.css
web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
web/src-tauri/capabilities/: main.json  new-mail-notification.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: account.rs  contacts.rs  diagnostics.rs  lib.rs  mail_html.rs  main.rs
web/src-tauri/src/desktop/: mod.rs  settings.rs
web/src-tauri/windows/nsis/: README.md  hooks.nsh
web/src/components/: AccountEmptyWorkspace.jsx  AccountSetup.jsx  AccountSetup.test.jsx  BrandLogo.jsx  ComposePanel.jsx  ContactsWorkspace.css  ContactsWorkspace.jsx  ContactsWorkspace.test.jsx  HtmlMessageBody.jsx  HtmlMessageBody.test.jsx  IconButton.jsx  IconButton.test.jsx  MailList.jsx  MessageView.jsx  MessageView.test.jsx  NativeHtmlMessageBody.jsx  NativeHtmlMessageBody.test.jsx  NewMailNotification.jsx  NewMailNotification.test.jsx  ProfileAvatar.jsx  ProfileAvatar.test.jsx  ReaderIdleExperience.jsx  ReaderIdleExperience.test.jsx  RecipientInput.jsx  RecipientInput.test.jsx  SegmentedMessageBody.jsx  SegmentedMessageBody.test.jsx  SendConfirmDialog.jsx  SettingsPanel.jsx  SettingsPanel.test.jsx  Sidebar.jsx  Sidebar.test.jsx  ThemedSelect.jsx  ThemedSelect.test.jsx  Toast.jsx  Tooltip.jsx  WindowTitlebar.jsx
web/src/data/: mockMail.js
web/src/services/: mailApi.js  mailApi.test.js
web/src/utils/: formatters.js  messageNavigation.js
