[package]
name = "mine-mail"
version = "0.1.1"
edition = "2024"
rust-version = "1.97"
description = "Local-first mail core for the Mine Mail desktop client"
license = "MIT"

[lib]
name = "mine_mail"
path = "src/lib.rs"

[[bin]]
name = "mine-mail"
path = "src/main.rs"

[dependencies]
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6.0", default-features = false, features = ["runtime-tokio"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1", "tokio1-native-tls"] }
mail-parser = { version = "0.11.5", features = ["full_encoding"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.23", features = ["serde", "v7"] }
zeroize = { version = "1.8", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
