[package]
name = "mine-mail-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Tauri desktop shell for Mine Mail"
license = "MIT"

[lib]
name = "mine_mail_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "mine-mail-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "4.1.4"
mine-mail = { path = "../.." }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tempfile = "3"
tokio = { version = "1", features = ["sync", "time"] }
zeroize = { version = "1.8", features = ["alloc"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# Tauri's Windows dependency graph can otherwise produce multi-gigabyte debug
# symbol and incremental caches, which is disproportionate for this thin shell.
[profile.dev]
debug = 1
incremental = false
