[package]
name = "mine-mail-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Tauri desktop shell for Mine Mail"
license = "MIT"

[lib]
name = "mine_mail_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "mine-mail-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ammonia = "4"
base64 = "0.22"
ego-tree = "0.11"
html5ever = "0.39"
keyring = "4.1.4"
mine-mail = { path = "../.." }
rusqlite = { version = "0.40.1", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tempfile = "3"
tokio = { version = "1", features = ["sync", "time"] }
zeroize = { version = "1.8", features = ["alloc"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
open = "5"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
url = "2"

# Tauri's Windows dependency graph can otherwise produce multi-gigabyte debug
# symbol and incremental caches, which is disproportionate for this thin shell.
[profile.dev]
debug = 1
incremental = false
